# FAT16-file-system

./: .gitignore  CMakeLists.txt  README.md  flake.nix  main.c
file_system/: common_types.h  file_system.c  file_system.h  file_system_api.h  fs_api.c  main.c  virtual_files_system.c  virtual_files_system.h  volume.c  volume_test.c
file_system/file_api/: file_api.c  file_api.h  file_table.h
file_system/file_system_api/: file_system.c  file_system.h  file_system_api.h
file_system/file_system_implementations/: FAT16.c  FAT16.h  FAT16_debug.c  FAT16_debug.h  FAT16_utility.c  FAT16_utility.h
file_system/formats/FAT16/: FAT16.c  FAT16.h  FAT16_IO.c  FAT16_IO.h  FAT16_debug.c  FAT16_debug.h  FAT16_utility.c  FAT16_utility.h
file_system/volume/: volume.c  volume.h  volume_ptr.h
file_system/volume/disks/: disk_debug.c  disk_debug.h
file_system/volume/disks/flash/: flashdisk.c  flashdisk.h
file_system/volume/disks/ram/: ramdisk.c  ramdisk.h
file_system/volume_management/: volume.c  volume.h  volume_test.c  volume_test.h
include/: FAT16.h  file_system.h  volume.h  volume_test.h
tests/: fs_tests.c  fs_tests.h  test_config.h  test_framework.c  test_framework.h
tests/api/: api.c  system_test.c  system_test.h
tests/file_api/: f_tests.c  f_tests.h
tests/filesystem_api/: fs_tests.c  fs_tests.h
tests/framework/: test_framework.c  test_framework.h  test_utils.h
tests/fs/: fs_tests.c  fs_tests.h
tests/property/: property_test.c  property_test.h
tests/utils/: test_utils.c  test_utils.h
tests/volume/: volume_test.c  volume_test.h
tests/volume/disks/ram/: ramdisk_test.c  ramdisk_test.h
